syntax = "proto3";

package model;
option go_package="./proto";

message Product {
    string id = 1;
    string name = 2;
    string description = 3;
    int32 stock = 4;
    float price = 5;
}

message CreateProductRequest {
    Product product = 1;
}

message CreateProductResponse {
    Product product = 1;
}

service ProductService {
    rpc CreateProduct(CreateProductRequest) returns(CreateProductResponse){};
}